--- a/table_DMSstudies_throughput.tex
+++ b/table_DMSstudies_throughput.tex
@@ -1,6 +1,6 @@
 \small
 \begin{tabular}{l l l l l}
-\textbf{Year} & \textbf{Author} & \textbf{Protein} & \textbf{Region} & \textbf{Saturation}  \\ \hline\hline
+\textbf{Year} & \textbf{Author} & \textbf{Protein} & \textbf{Region} & \textbf{Coverage}  \\ \hline\hline
 2010 & Fowler~\etal~\cite{fowler_high-resolution_2010} & YAP65 & WW~domain & $\sim 100\%$\\
 2010 & Ernst~\etal~\cite{ernst_coevolution_2010} & Synthetic PDZ domain & 10~AAs & $\sim 100\%$\\
 2011 & Hietpas~\etal~\cite{hietpas_experimental_2011} & Hsp90 & 9~AAs & $\sim 100\%$\\
