--- a/thesis.bib
+++ b/thesis.bib
@@ -342,7 +342,7 @@ A major bottleneck in protein structure prediction is the selection of correct m
 	number = {2},
 	urldate = {2017-02-06},
 	journal = {Structure},
-	author = {Adkar, Bharat V. and Tripathi, Arti and Sahoo, Anusmita and Bajaj, Kanika and Goswami, Devrishi and Chakrabarti, Purbani and Swarnkar, Mohit K. and Gokhale, Rajesh S. and Varadarajan, Raghavan},
+	author = {Adkar, Bharat V. and Tripathi, Arti and Sahoo, Anusmita and Bajaj, Kanika and Goswami, Devrishi and Chakrabarti, Purbani and Swarnkar, Mohit K. and Gokhale, Rajesh S. and Varadarajan, Raghavan},
 	month = feb,
 	year = {2012},
 	pages = {371--381}
@@ -1319,7 +1319,7 @@ Genet Med 17 5, 405–423.},
 	number = {5},
 	urldate = {2017-03-03},
 	journal = {American Journal of Human Genetics},
-	author = {Edwards, Stacey L. and Beesley, Jonathan and French, Juliet D. and Dunning, Alison M.},
+	author = {Edwards, Stacey L. and Beesley, Jonathan and French, Juliet D. and Dunning, Alison M.},
 	month = nov,
 	year = {2013},
 	pmid = {24210251},
@@ -2462,5 +2462,59 @@ PML and several other proteins localizing in PML-nuclear bodies (PML-NB) contai
 	year = {1994},
 	pmid = {7522328},
 	pages = {9022--9026},
-	file = {Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/WBJTW9WN/9022.html:text/html}
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/3KAE5T98/Mattheakis et al. - 1994 - An in vitro polysome display system for identifyin.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/WBJTW9WN/9022.html:text/html}
+}
+
+@article{acuna-hidalgo_new_2016,
+	title = {New insights into the generation and role of de novo mutations in health and disease},
+	volume = {17},
+	issn = {1474-760X},
+	url = {http://dx.doi.org/10.1186/s13059-016-1110-1},
+	doi = {10.1186/s13059-016-1110-1},
+	abstract = {Aside from inheriting half of the genome of each of our parents, we are born with a small number of novel mutations that occurred during gametogenesis and postzygotically. Recent genome and exome sequencing studies of parent–offspring trios have provided the first insights into the number and distribution of these de novo mutations in health and disease, pointing to risk factors that increase their number in the offspring. De novo mutations have been shown to be a major cause of severe early-onset genetic disorders such as intellectual disability, autism spectrum disorder, and other developmental diseases. In fact, the occurrence of novel mutations in each generation explains why these reproductively lethal disorders continue to occur in our population. Recent studies have also shown that de novo mutations are predominantly of paternal origin and that their number increases with advanced paternal age. Here, we review the recent literature on de novo mutations, covering their detection, biological characterization, and medical impact.},
+	urldate = {2017-03-06},
+	journal = {Genome Biology},
+	author = {Acuna-Hidalgo, Rocio and Veltman, Joris A. and Hoischen, Alexander},
+	year = {2016},
+	pages = {241},
+	annote = {Pages 241 in PDF},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/XG3FB3J5/Acuna-Hidalgo et al. - 2016 - New insights into the generation and role of de no.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/XPWE4RDW/s13059-016-1110-1.html:text/html}
+}
+
+@article{julius_demonstration_1972,
+	title = {Demonstration {That} {Antigen}-{Binding} {Cells} {Are} {Precursors} of {Antibody}-{Producing} {Cells} {After} {Purification} with a {Fluorescence}-{Activated} {Cell} {Sorter}},
+	volume = {69},
+	issn = {0027-8424, 1091-6490},
+	url = {http://www.pnas.org/content/69/7/1934},
+	abstract = {We have obtained viable and functional populations of antigen-binding cells enriched up to 500-fold from primed spleen-cell suspensions by fluorescent labeling and by a new electronic cell sorter that sorts viable cells according to fluorescence. Concomitantly, populations largely depleted of antigen-binding cells were obtained. While neither population alone is capable of a full adoptive secondary response when injected into irradiated recipients, a reconstituted mixture restores the full response of the unfractionated spleen cells. Admixture of sources of unprimed thymus-derived cells (T-cells) with the purified antigen-binding cells (B-cells) restores much of the full response.},
+	language = {en},
+	number = {7},
+	urldate = {2017-03-06},
+	journal = {Proceedings of the National Academy of Sciences},
+	author = {Julius, M. H. and Masuda, T. and Herzenberg, L. A.},
+	month = jul,
+	year = {1972},
+	pmid = {4114858},
+	keywords = {adoptive secondary response, human-serum albumin, keyhole-limpet hemocyanin, lymphocyte receptors, thymus-derived, bone marrow-derived cells},
+	pages = {1934--1938},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/8U86RU8N/Julius et al. - 1972 - Demonstration That Antigen-Binding Cells Are Precu.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/CV7R7EGD/1934.html:text/html}
+}
+
+@article{tatham_polymeric_2001,
+	title = {Polymeric {Chains} of {SUMO}-2 and {SUMO}-3 {Are} {Conjugated} to {Protein} {Substrates} by {SAE}1/{SAE}2 and {Ubc}9},
+	volume = {276},
+	issn = {0021-9258, 1083-351X},
+	url = {http://www.jbc.org/content/276/38/35368},
+	doi = {10.1074/jbc.M104214200},
+	abstract = {Conjugation of the small ubiquitin-like modifier SUMO-1/SMT3C/Sentrin-1 to proteins in vitro is dependent on a heterodimeric E1 (SAE1/SAE2) and an E2 (Ubc9). Although SUMO-2/SMT3A/Sentrin-3 and SUMO-3/SMT3B/Sentrin-2 share 50\% sequence identity with SUMO-1, they are functionally distinct. Inspection of the SUMO-2 and SUMO-3 sequences indicates that they both contain the sequence ψKXE, which represents the consensus SUMO modification site. As a consequence SAE1/SAE2 and Ubc9 catalyze the formation of polymeric chains of SUMO-2 and SUMO-3 on protein substrates in vitro, and SUMO-2 chains are detectedin vivo. The ability to form polymeric chains is not shared by SUMO-1, and although all SUMO species use the same conjugation machinery, modification by SUMO-1 and SUMO-2/-3 may have distinct functional consequences.},
+	language = {en},
+	number = {38},
+	urldate = {2017-03-07},
+	journal = {Journal of Biological Chemistry},
+	author = {Tatham, Michael H. and Jaffray, Ellis and Vaughan, Owen A. and Desterro, Joana M. P. and Botting, Catherine H. and Naismith, James H. and Hay, Ronald T.},
+	month = sep,
+	year = {2001},
+	pmid = {11451954},
+	pages = {35368--35374},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/TQK97NP7/Tatham et al. - 2001 - Polymeric Chains of SUMO-2 and SUMO-3 Are Conjugat.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/PREIPX2A/35368.html:text/html}
 }
