--- a/introduction.tex
+++ b/introduction.tex
@@ -97,7 +97,8 @@ Deep Mutational Scanning, as performed in these studies, can be broken down into
 % \end{table}
 
 
-\paragraph{Mutagenesis approaches:} A fair number of saturation mutagenesis methods have previously been applied in DMS studies; some more technically challenging than others. The simplest method is error-prone PCR amplification~\cite{cadwell_mutagenic_1994,mohan_pcr_2011}. While this has the advantage of being an inexpensive and facile procedure, it will only result in the generation of point mutations and as such will not generate all possible amino acid replacements. One may argue that the evaluation of VUS does not require insight into mutations outside of these variants, as they are unlikely to occur in nature. Nonetheless, exploring all possible amino acid changes beckons the potential of valuable biochemical insights. 
+\subsection{Mutagenesis approaches} 
+A fair number of saturation mutagenesis methods have previously been applied in DMS studies; some more technically challenging than others. The simplest method is error-prone PCR amplification~\cite{cadwell_mutagenic_1994,mohan_pcr_2011}. While this has the advantage of being an inexpensive and facile procedure, it will only result in the generation of point mutations and as such will not generate all possible amino acid replacements. One may argue that the evaluation of VUS does not require insight into mutations outside of these variants, as they are unlikely to occur in nature. Nonetheless, exploring all possible amino acid changes beckons the potential of valuable biochemical insights. 
 
 Another set of methods often employed are scaled-up versions of site-directed mutagenesis approaches~\cite{hutchison_mutagenesis_1978,seyfang_multiple_2004,firnberg_pfunkel:_2012}, with one popular example being Kunkel mutagenesis~\cite{kunkel_rapid_1985}. It uses a strain of \species{E.~coli} that has been modified to produce high levels of uridine and lacks the ability to excise these bases from DNA. A phage vector carrying the desired template sequence is transfected into the cells resulting in its replication with a high uracil incorporation rate. The thus uracilated template can be PCR amplified with primers containing the mutations of interest and subsequently amplified in regular \species{E.~coli} which will degrade the uracilated template, thus enriching the mutant copies. A number of derivatives of Kunkel mutagenesis have since been developed to bring its output to a scale supporting saturated libraries, most notably Pfunkel~\cite{firnberg_pfunkel:_2012}.
 To address the full spectrum of amino acids at a given position, oligonucleotides carrying degeneracy codons~\cite{pal_methods_2005} are often used. Particularly popular is the use of \texttt{NNK} and \texttt{NNS} degeneracies, which have long been used in biochemistry~\cite{scott_searching_1990,barbas_semisynthetic_1992}. Here, \texttt{S} denotes either Guanine or Cytosine and \texttt{K} denotes either Guanine or Thymine in the third position of the degenerate codon. Either of these options only enables 32 out of all 64 possible codons, but they do cover all 20 possible amino acids while avoiding two of the three possible stop codons (opal and ochre). A more recent development is the use of custom oligonucleotide arrays covering all possible (or desired) options of codon changes explicitly rather than relying on degeneracy~\cite{kitzman_massively_2015}. While this option allows for the precise control of desired mutations, it is currently too expensive to be applicable for more than a handful of genes at a time.
@@ -110,7 +111,8 @@ In addition to the various mutagenesis methods discussed here, it may be noted t
 % \textbf{Step 2: Library construction} Library construction is the second step in any DMS experiment. \todo{Mention en masse cloning via gateway or Gibson assembly. Survey methods in the list of papers.}
 % The design of the library is dependent on the type of selection and sequencing used in the later steps. Some methods require mutants to be tagged with molecular barcodes, i.e. short unique DNA sequences inserted at a known location that allow identification of a molecule with just a single sequencing read. While the use of barcodes greatly simplifies the readout of the selection result it does require that the contents of the library are catalogued at the time of construction.
 
-\paragraph{Selection approaches:} The most central component of a Deep Mutation Scan is the selection process. In section~\ref{complY2HIntro} two options were already discussed in detail: Y2H and functional complementation. There are a fair number of other options, even though many of them may not be as useful in the context of identifying disease variants. The different assays used in previous studies can be sorted into three broad categories: (i) \textit{In~vitro} display methods (such as Phage Display or Ribodisplay); (ii) Competition-based methods that couple a protein property under investigation (such as molecular interactions, toxicity, or overall functionality) to host fitness; and (iii) Cell sorting based on fluorescence labeled reporters.
+\subsection{Selection approaches} 
+The most central component of a Deep Mutation Scan is the selection process. In section~\ref{complY2HIntro} two options were already discussed in detail: Y2H and functional complementation. There are a fair number of other options, even though many of them may not be as useful in the context of identifying disease variants. The different assays used in previous studies can be sorted into three broad categories: (i) \textit{In~vitro} display methods (such as Phage Display or Ribodisplay); (ii) Competition-based methods that couple a protein property under investigation (such as molecular interactions, toxicity, or overall functionality) to host fitness; and (iii) Cell sorting based on fluorescence labeled reporters.
 
 Phage display~\cite{smith_filamentous_1985} and ribodisplay~\cite{mattheakis_vitro_1994} couple the genetic information of a given variant to the physical protein itself and select according to the protein's ability to bind to a fixed interactor. In phage display this is achieved by the protein being displayed on the surface of a phage that contains the corresponding gene; while ribodisplay stalls a cluster of ribosomes on the variant mRNA with the corresponding protein still attached. Variants that are unable to bind to the interactor-coated surface are washed away and thus depleted. This can be done in multiple rounds, as the associated genetic information can be replicated again after selection (via viral propagation in bacteria for phage display or via PCR in ribodisplay). Fowler and colleagues employed phage display in their seminal DMS study with respect to the binding of the YAP65-WW domain to its cognate peptide target~\cite{fowler_high-resolution_2010}. However, since display methods are only feasible for small proteins or fragments thereof, more recent studies have employed more scalable methods instead.
 
@@ -120,7 +122,8 @@ The most frequently applied selection mechanisms are fitness based. In these cas
 Finally, another selection mechanism is the use of fluorescence-activated cell sorting (FACS)~\cite{julius_demonstration_1972}. Here, surface markers whose abundance are proportional to the activity of the studied protein are targeted with fluorescently labeled antibodies, such that cells can be sorted accordingly, as has been performed by Schlinkmann \etal\ and Majithia \etal~\cite{schlinkmann_critical_2012,majithia_prospective_2016}.
 
 
-\paragraph{Sequencing strategies:} The experimental step immediately following selection in a DMS experiment is sequencing. Next-generation sequencing technology can be considered the key technological advance that made Deep Mutational Scanning possible. Many studies use a fairly simple approach by performing deep shotgun sequencing of the library~\cite{ernst_coevolution_2010,hietpas_experimental_2011,fujino_robust_2012}. However, a major problem with this approach is that without knowing which reads originate from which DNA molecule, each read can only be considered by itself, making it difficult to distinguish real mutations from sequencing error. To address this problem, different solutions have emerged. In cases where the amplicon is short enough, paired-end sequencing can be exploited to use information for variant calling. In the simplest case this is achieved by requiring both reads to agree on the base call in question, as in the case of Whitehead~\etal~\cite{whitehead_optimization_2012}. A less stringent, but potentially more sensitive alternative as used by Fowler and colleagues~\cite{fowler_high-resolution_2010} is to perform Bayesian inference on the quality scores associated with the base calls in each read pair. This way a variant may still be identified if one of the two reads reported a wildtype base call with low confidence. 
+\subsection{Sequencing strategies} 
+The experimental step immediately following selection in a DMS experiment is sequencing. Next-generation sequencing technology can be considered the key technological advance that made Deep Mutational Scanning possible. Many studies use a fairly simple approach by performing deep shotgun sequencing of the library~\cite{ernst_coevolution_2010,hietpas_experimental_2011,fujino_robust_2012}. However, a major problem with this approach is that without knowing which reads originate from which DNA molecule, each read can only be considered by itself, making it difficult to distinguish real mutations from sequencing error. To address this problem, different solutions have emerged. In cases where the amplicon is short enough, paired-end sequencing can be exploited to use information for variant calling. In the simplest case this is achieved by requiring both reads to agree on the base call in question, as in the case of Whitehead~\etal~\cite{whitehead_optimization_2012}. A less stringent, but potentially more sensitive alternative as used by Fowler and colleagues~\cite{fowler_high-resolution_2010} is to perform Bayesian inference on the quality scores associated with the base calls in each read pair. This way a variant may still be identified if one of the two reads reported a wildtype base call with low confidence. 
 
 Where the length of the nucleotide sequence in question exceeds the read length capabilities of short-read sequencing technologies, other strategies are required. A notable borderline case can be found in Olson~\etal~2014~\cite{olson_comprehensive_2014} where only a partial overlap between read pairs was achieved and variant calls outside of the overlap region were of lower quality. Other studies resort to more involved approaches. A popular paradigm is the association of molecular barcodes with each clone within the DMS library. While this simplifies the readout of the experiment (as only the barcodes need to be sequenced and counted), it adds the requirement of identifying which barcode belongs to which genotype. In most cases this is addressed using ``subassembly''~\cite{hiatt_parallel_2010}, a high-throughput amplicon sequencing approach based on attaching random tags to amplicons. The DNA is then amplified, sheared and ligated to adapters, so that paired end sequencing can be used to identify the random tag together with each read. This allows reads to be sorted according to which original tagged molecule they belong to, which in terms enables assemblies for each molecule to be computed. The resulting high-quality virtual reads are long enough to cover both ORF and barcode locus.
 
@@ -128,10 +131,12 @@ Another barcode-based method, called EMPIRIC-BC is used by Mavor and colleagues~
 
 An alternative approach to covering longer stretches of DNA is to subdivide them into smaller regions that can be sequenced separately from each other. For example, Doud and colleagues~\cite{doud_accurate_2016} amplify each region with primers carrying random tags. This way, if multiple reads contain the same tag, they are highly likely to originate from PCR copies of the same original molecule and can be used to make more accurate variant calls. While this approach has the advantage of being less labour-intensive than barcoding each individual clone in the DMS library, it can only detect variants co-occurring within the same region of the sequence. Thus the library must be designed in such a way that either only a single mutation occurs within each clone or that it is large enough that effects of many co-occurring variants are averaged out.
 
-\paragraph{Computational analysis:} Most DMS studies use custom scripts to process the sequencing readout and calculate the selection advantage for each variant. Nonetheless, a few published software packages exist. The EMPIRIC mutagenesis and DMS method provides its own software package for data processing~\cite{hietpas_experimental_2011}, though it is not generally applicable to other DMS methods. The \texttt{dms\_tools} package~\cite{bloom_software_2015} offers the same services, but is tailored more towards methods using regionally focused sequencing. Finally, \texttt{Enrich}~\cite{fowler_enrich:_2011} offers a generalized solution applicable to most DMS frameworks. A second version that adds a more sophisticated statistical analysis including the assessment of measurement confidence levels is currently under review~\cite{rubin_enrich2:_2016}.
+\subsection{Computational analysis} 
+Most DMS studies use custom scripts to process the sequencing readout and calculate the selection advantage for each variant. Nonetheless, a few published software packages exist. The EMPIRIC mutagenesis and DMS method provides its own software package for data processing~\cite{hietpas_experimental_2011}, though it is not generally applicable to other DMS methods. The \texttt{dms\_tools} package~\cite{bloom_software_2015} offers the same services, but is tailored more towards methods using regionally focused sequencing. Finally, \texttt{Enrich}~\cite{fowler_enrich:_2011} offers a generalized solution applicable to most DMS frameworks. A second version that adds a more sophisticated statistical analysis including the assessment of measurement confidence levels is currently under review~\cite{rubin_enrich2:_2016}.
 
 
-\paragraph{Conclusion:} When considering previous DMS studies in the context of VUS classification, a number issues become apparent. Many of these have primarily used DMS in the context of biochemistry. The assays underlying different DMS studies are quite diverse and measure different aspects of a protein's behaviour. As a consequence, they cannot be easily compared with each other. In addition, the achieved coverage of possible amino acid changes varies from map to map. Finally, many maps to do not control the quality of measurements. Therefore, the confidence levels underlying different parts of these maps are often unknown. A generalized framework that would allow for the construction of comparable, high-quality maps representing overall protein function would be of great utility.
+\subsection{Conclusion} 
+When considering previous DMS studies in the context of VUS classification, a number issues become apparent. Many of these have primarily used DMS in the context of biochemistry. The assays underlying different DMS studies are quite diverse and measure different aspects of a protein's behaviour. As a consequence, they cannot be easily compared with each other. In addition, the achieved coverage of possible amino acid changes varies from map to map. Finally, many maps to do not control the quality of measurements. Therefore, the confidence levels underlying different parts of these maps are often unknown. A generalized framework that would allow for the construction of comparable, high-quality maps representing overall protein function would be of great utility.
 
 % \section{Edgotyping}
 
