--- a/thesis.bib
+++ b/thesis.bib
@@ -2518,3 +2518,11 @@ PML and several other proteins localizing in PML-nuclear bodies (PML-NB) contai
 	pages = {35368--35374},
 	file = {Full Text PDF:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/TQK97NP7/Tatham et al. - 2001 - Polymeric Chains of SUMO-2 and SUMO-3 Are Conjugat.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/PREIPX2A/35368.html:text/html}
 }
+
+@inproceedings{sobel_3x3_1968,
+	title = {A 3x3 isotropic gradient operator for image processing},
+	booktitle = {The {Stanford} {Artificial} {Intelligence} {Project}},
+	author = {Sobel, Irwin and Feldman, Gary},
+	year = {1968},
+	pages = {271--272}
+}
